--- a/wp-content/themes/jw_sites/custom/css-compiled/custom_home_-_particles.css
+++ b/wp-content/themes/jw_sites/custom/css-compiled/custom_home_-_particles.css
@@ -387,7 +387,7 @@
   text-transform: none;
 }
 @media only all and (max-width: 47.99rem) {
-  .uk_card_multi_columns {
+  .uk_card_multi_columns .uk-card {
     margin: 20px 0 0 0 !important;
   }
 }
